# dp-lora

./: .gitignore  README.md  pyproject.toml
examples/: epsilon_sweep.py  sst2_roberta.py  sweep.py
src/dp_lora/: __init__.py  config.py  privacy_engine.py
src/dp_lora/accounting/: __init__.py  accountant.py
src/dp_lora/data/: __init__.py  poisson_loader.py  virtual_batch.py
src/dp_lora/grad_sample/: __init__.py  ghost_clipping.py  grad_sample_module.py  hooks.py
src/dp_lora/integrations/: __init__.py  hf_trainer.py
src/dp_lora/optimizers/: __init__.py  dp_optimizer.py
tests/: test_accountant.py  test_dp_optimizer.py  test_ghost_clipping.py  test_hooks.py  test_privacy_engine.py  test_virtual_batch.py
